--- a/src/components/Slide.module.css
+++ b/src/components/Slide.module.css
@@ -8,7 +8,14 @@
 
 .container {
     width: 100vw;
-    position: absolute;
-    top: 0;
-    left: 0;
+    max-height: 100vh;
+    overflow-y: scroll;
+    scroll-snap-type: y mandatory;
+}
+
+.fakecontent {
+    height: 100vh;
+    scroll-snap-align: start;
+    opacity: 0;
+    z-index: -1;
 }
