--- a/src/index.css
+++ b/src/index.css
@@ -4,15 +4,16 @@ body {
     /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif; */
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: rgb(51, 51, 51);
+    background-color: rgb(25, 25, 25);
     color: white;
     -ms-overflow-style: none;
-    /* scrollbar-width: none; */
+    width: 100vw;
+    max-height: 100vh;
+    overflow-y: scroll;
+    scroll-snap-type: y mandatory;
 }
 
 code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
-}
-::-webkit-scrollbar {
-    /* display: none; */
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+        monospace;
 }
