--- a/src/slides/About.module.css
+++ b/src/slides/About.module.css
@@ -1,10 +1,9 @@
 .container {
-    font-family: medium-content-serif-font, Georgia, Cambria, "Times New Roman", Times, serif;
-    line-height: 1.2;
+    font-family: "Nunito", medium-content-serif-font, Georgia, Cambria,
+        "Times New Roman", Times, serif;
     font-weight: 200;
     text-align: left;
-    letter-spacing: -0.03em;
-    font-size: 14pt;
+    font-size: 12pt;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -14,16 +13,12 @@
 
 .header {
     margin: 0;
-    font-family: "Roboto", sans-serif;
-    font-weight: 200;
+    font-family: "Nunito", sans-serif;
+    font-weight: 600;
 }
 
 .paragraph {
     margin: 0 10vw;
-}
-
-.strong {
-    font-size: 24pt;
 }
 
 .link {
