--- a/src/slides/Video.module.css
+++ b/src/slides/Video.module.css
@@ -13,12 +13,15 @@
 
 .video {
     border-radius: 10px;
-    width: 50%;
-    height: calc(50% * 9 / 16);
+    margin: 10px;
+    width: 90vw;
+    height: calc(90vw * 9 / 16);
+    max-width: 600px;
+    max-height: calc(600px * 9 / 16);
 }
 
 .separator {
-    height: 1px;
+    height: 2px;
     background-color: rgba(255, 255, 255, 0.3);
     width: 30vw;
     margin: 10px;
@@ -29,12 +32,13 @@
 }
 
 .description {
-    margin: 2vw 10vw;
+    margin: 10px 10vw;
 }
 .description a {
     color: white;
     text-decoration: underline;
+    display: inline-block;
 }
 .description a:hover {
-    font-size: 12pt;
+    transform: scale(1.1);
 }
