--- a/src/components/exhibit.module.css
+++ b/src/components/exhibit.module.css
@@ -1,25 +1,36 @@
 .exhibit {
   background: white;
-  width: 70vw;
+  width: 100%;
+  min-height: 60vh;
   height: 70vh;
+  max-height: 90vh;
   border: none;
   mask-image: radial-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.3));
   box-shadow: 0 3px 3px rgb(15, 15, 15);
 }
 .wrapper {
   position: relative;
+  width: 100%;
 }
 
 .container {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100%;
   overflow: hidden;
   scroll-snap-align: start;
+  height: 100%;
 }
-
+@media (min-width: 768px) {
+  .wrapper {
+    margin: 7em;
+  }
+}
+@media (max-width: 767px) {
+  .container {
+    padding: 1em;
+  }
+}
 .info {
   font-family: "Open Sans", sans-serif;
   margin: 1em 0;
