--- a/src/components/slide.module.css
+++ b/src/components/slide.module.css
@@ -8,5 +8,10 @@
   max-width: 100vw;
   max-height: 100vh;
   overflow-y: scroll;
-  scroll-snap-type: y mandatory;
+}
+
+@media (min-width: 768px) {
+  .slides {
+    scroll-snap-type: y mandatory;
+  }
 }
